--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "safe-main-merge-ci-test",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test tests.js"
   },
   "keywords": [],
   "author": "",
