--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,8 +35,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - uses: pr-mpt/actions-merge-branch@v2
+    - uses: ad-m/github-push-action@master
       with:
-        from: main
-        commit: true
-        push: true
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: main
