Fix: permissions configuration

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,12 +3,12 @@
 
 name: Node.js CI
 
-permissions:
-  contents: read|write
-
 on:
   push:
     branches: [ "*", "!main" ]
+
+permissions:
+  contents: write
 
 jobs:
   build:
