Support non-FF merges
Commit after merge so that non-FF merges also work (previously they wouldn't be pushed back to main as we didn't do a commit after the merge). This is pretty much essential to support multiple branches. Still no opinion on how to handle merge conflicts.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: pr-mpt/actions-merge-branch@v2
       with:
         from: origin/${{ github.ref_name }}
-        commit: false
+        commit: true
         push: false
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
